in-memory storage limit
